--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <mate charest="utf-8" />
-    <title>Hello world!</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Xingxing Liu's Home Page</title>
 </head>
 
-<body>
-    <h1>Hello world!</h1>
+<body style="margin: 0px; height:850px; width:auto">
+    <iframe src="FrameSetting.html" style="height:100%;width:100%;border-width:0px;">
+    </iframe>
+
 </body>
 
 </html>
