--- a/FrameSetting.html
+++ b/FrameSetting.html
@@ -6,10 +6,10 @@
     <title>Frame Setting</title>
 </head>
 <frameset rows="10%,90%" frameborder="no" scrolling="no">
-    <frame src="Top.html" frameborder="no" scrolling="no" noresize />
+    <frame src="top.html" frameborder="no" scrolling="no" noresize />
     <frameset cols="325px,*">
-        <frame src="Bottom_Left.html" frameborder="no" scrolling="no" noresize />
-        <frame src="Bottom_Right.html" frameborder="no" scrolling="no" noresize />
+        <frame src="bottomLeft.html" frameborder="no" scrolling="no" noresize />
+        <frame src="bottomRight.html" frameborder="no" scrolling="no" noresize />
     </frameset>
 </frameset>
 <noframes></noframes>
