--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Xingxing Liu's Home Page</title>
+    <title>Hejin Fang's Home Page</title>
 </head>
 
 <body style="margin: 0px; height:850px; width:auto">
